--- a/index.html
+++ b/index.html
@@ -10,40 +10,15 @@
     <meta itemprop="image" content="screenshot.png">
     <meta name="description" content="made with cables" />
 
-    <style>
-        body {
-            margin: 0;
-            background-color: #000;
-            color: #fff;
-            font-family: Helvetica, Arial, sans-serif;
-            overflow: hidden; /* disable scrolling / rubberband effect on mobile */
-        }
-
-        canvas {
-            display: block;
-            position: absolute;
-            outline:0;
-        }
-
-        * {
-            /* disable on touch highlights of html elements, especially on mobile! */
-            -webkit-tap-highlight-color: transparent;
-            -webkit-touch-callout: none;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-        }
-
-    </style>
-
 </head>
 
 <body>
-    <canvas id="glcanvas" width="100vw" height="100vh" tabindex="1"></canvas>
+    <<canvas style="top: 0; left: 0; position: absolute;" id="glcanvas" width="100vw" height="100vh" tabindex="1"></canvas>
 
     
+<libs/>
     <script type="text/javascript" src="js/patch.js" async></script>
+    <corelibs/>
     
 
     <script>
