--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <<canvas style="top: 0; left: 0; position: absolute;" id="glcanvas" width="100vw" height="100vh" tabindex="1"></canvas>
+    <canvas style="top: 0; left: 0; position: absolute;" id="glcanvas" width="100vw" height="100vh" tabindex="1"></canvas>
 
     
 <libs/>
