--- a/index.html
+++ b/index.html
@@ -48,15 +48,16 @@
                 "canvas":{"alpha":true,"premultipliedAlpha":true} // make canvas transparent
             });
         });
-        {
-    -webkit-tap-highlight-color: transparent;
+
+    </script>
+    <style>   body {  -webkit-tap-highlight-color: transparent;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-}
-    </script>
+    
+    }</style>
 </body>
 
 </html>
